Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.7, 10.8, 10.7.3, 10.7.4
-
Component/s: Encryption, Storage Engine - InnoDB
-
Labels:None
Description
After an upgrade from 10.6.7 to 10.7.3 we have attempted to export and import a dump. This fails on import with errors like "ERROR 2013 (HY000) at line 13654: Lost connection to server during query". The mariadb crashed on import (error log attached). We than upgraded to 10.7.4 and the import fails too.
This issue has only manifested with data-at-rest encryption enabled and key checks settings in dump file on an table with more than 58254 table rows (example dump attached).
Data at rest encryption was enabled with:
File Key Management
plugin_load_add = file_key_management
|
file_key_management_filename = /etc/mysql/enc/keys.enc
|
file_key_management_filekey = FILE:/etc/mysql/enc/.key
|
file_key_management_encryption_algorithm = aes_cbc
|
InnoDB/XtraDB Encryption
encrypt_binlog = ON
|
encrypt_tmp_disk_tables = ON
|
encrypt_tmp_files = ON
|
innodb_encrypt_log = ON
|
innodb_encrypt_tables = ON
|
innodb_encryption_threads = 2 |
Attachments
Issue Links
- relates to
-
MDEV-24621 In bulk insert, pre-sort and build indexes one page at a time
-
- Closed
-
-
MDEV-28321 After upgrade to 10.7.3-1 and renabling of data-at-rest encryption unable to restore dump file.
-
- Closed
-